# Python-Google-OAuth

./: .gitignore  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
templates/: base.html  dashboard.html  index.html  login.html  register.html
